# tapebench

./: .gitignore  BENCHMARKS.md  CMakeLists.txt  DESIGN.md  LICENSE  README.md
.github/workflows/: ci.yml
bench/: CMakeLists.txt  bench_bar_aggregation.cpp  bench_dispatch.cpp  bench_mapped_tape.cpp  bench_parallel_grid.cpp  bench_simulate.cpp  bench_tick_generation.cpp  virtual_strategy.cpp  virtual_strategy.hpp
include/tapebench/: analytics.hpp  bar.hpp  bar_aggregator.hpp  execution_model.hpp  mapped_tape.hpp  parallel_backtest.hpp  position.hpp  simulation.hpp  strategy.hpp  synthetic_generator.hpp  tape_format.hpp  tape_writer.hpp  thread_pool.hpp  tick.hpp
include/tapebench/strategies/: mean_reversion.hpp  moving_average_crossover.hpp
src/: analytics.cpp  bar_aggregator.cpp  main.cpp  mapped_tape.cpp  position.cpp  synthetic_generator.cpp  tape_writer.cpp  thread_pool.cpp
src/strategies/: mean_reversion.cpp  moving_average_crossover.cpp
tests/: CMakeLists.txt  test_analytics.cpp  test_bar_aggregator.cpp  test_execution_model.cpp  test_mapped_tape.cpp  test_mapped_tape_zero_copy.cpp  test_mean_reversion.cpp  test_moving_average_crossover.cpp  test_parallel_backtest.cpp  test_position.cpp  test_simulation.cpp  test_strategy.cpp  test_synthetic_generator.cpp  test_thread_pool.cpp
